--- a/part2/course-practice/src/App.css
+++ b/part2/course-practice/src/App.css
@@ -1,35 +1,6 @@
-h1, p, span {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #1d3557;
-}
-
-ul {
-  line-height: 1.6;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #343a40;
-}
-
-form > input {
-  padding: .4rem .2rem;
-  border-radius: .2rem;
-  outline: none;
-  border: 1px solid #343a40;
-  margin: 0 .6rem;
-}
-
-form > button {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  padding: .4rem 1rem;
-  color: #f8f9fa;
-  background-color: #1d3557;
-  border: 1px solid transparent;
-  border-radius: .2rem;
-  cursor: pointer;
-  transition: .15s ease-in-out;
-}
-
-form > button:hover {
-  color: #1d3557;
-  background-color: #f8f9fa;
-  border: 1px solid #1d3557;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
